# Stand

./: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO  main.cpp  resources.qrc
Application/: AppController.cpp  AppController.h  Application.cpp  Application.h  ChannelPanel.cpp  ChannelPanel.h  ClassifierController.cpp  ClassifierController.h  CombinedRxController.cpp  CombinedRxController.h  DemodulatorPanel.cpp  DemodulatorPanel.h  LoggerOptionsDialog.cpp  LoggerOptionsDialog.h  RadioMonitorPage.cpp  RadioMonitorPage.h  RecordingSettingsDialog.cpp  RecordingSettingsDialog.h  RxController.cpp  RxController.h  SessionManager.cpp  SessionManager.h  TxController.cpp  TxController.h
Audio/: FmAudioOutput.cpp  FmAudioOutput.h
Core/: ChannelDescriptor.h  DeviceSettings.cpp  DeviceSettings.h  FileNaming.cpp  FileNaming.h  IDevice.h  IDeviceManager.h  ILogger.h  IPipelineHandler.h  ISyncController.h  ITxSource.h  LimeException.h  Logger.cpp  Logger.h  LoggerConfig.cpp  LoggerConfig.h  Pipeline.cpp  Pipeline.h  RecordingSettings.h
DSP/: AmDemodHandler.cpp  AmDemodHandler.h  AmDemodulator.cpp  AmDemodulator.h  AudioFileHandler.cpp  AudioFileHandler.h  BandpassExporter.cpp  BandpassExporter.h  BandpassHandler.cpp  BandpassHandler.h  BaseDemodHandler.cpp  BaseDemodHandler.h  BaseDemodulator.cpp  BaseDemodulator.h  ClassifierHandler.cpp  ClassifierHandler.h  DemodRegistry.cpp  DemodRegistry.h  DemodTypes.h  DspUtils.cpp  DspUtils.h  FftHandler.cpp  FftHandler.h  FftProcessor.cpp  FftProcessor.h  FmDemodHandler.cpp  FmDemodHandler.h  FmDemodulator.cpp  FmDemodulator.h  IqCombiner.cpp  IqCombiner.h  RawFileHandler.cpp  RawFileHandler.h  ToneGenerator.cpp  ToneGenerator.h
FFTProcessor/: FftProcessor.h
Hardware/: Device.cpp  DeviceController.cpp  DeviceController.h  LimeDevice.cpp  LimeDevice.h  LimeDeviceManager.cpp  LimeDeviceManager.h  LimeManager.cpp  LimeManager.h  LimeSyncController.cpp  LimeSyncController.h  RxWorker.cpp  RxWorker.h  StreamWorker.cpp  StreamWorker.h  TxWorker.cpp  TxWorker.h
Legacy/: Device.cpp  Device.h  LimeManager.cpp
LimeCore/: Device.cpp  Device.h  DeviceController.cpp  DeviceController.h  LimeManager.cpp  LimeManager.h  Logger.cpp  StreamWorker.cpp  StreamWorker.h
Python/: classifier_service.py
Tests/: test_amdemod.cpp  test_fftprocessor.cpp  test_fmdemod.cpp  test_iqcombiner.cpp
docs/: Stand_Documentation_EN.docx  Stand_Documentation_RU.docx  architecture.md  dsp.md  hardware.md  plan_v2.1.md
